--- a/Comunicaciones.html
+++ b/Comunicaciones.html
@@ -79,6 +79,10 @@
         <!-- Main Menú -->
 
         <nav class="navbar navbar-expand-lg navbar-light  nav-bar-menu ">
+
+          <img align="left" class="logo-min" 
+         src="https://www.minsalud.gov.co/LogosInstitucionales/logo-gobierno-Ministerio-de-Salud-y-Proteccion-Social-minsalud.png" 
+         alt="Ministerio de Salud">
             
              <button class="navbar-toggler navbar-toggler-right  button-bar-menu" type="button" 
                     data-toggle="collapse" data-target="#navbarSupportedContent_mega" 
