--- a/index.html
+++ b/index.html
@@ -789,7 +789,7 @@
             
           <div class="grid2x">
             <div class="box bg-left"><div><a href="#">Servicio al Cliente</a></div></div>
-            <div class="box bg-right"><div><a href="#">Centro de Comunicaciones</a></div></div>
+            <div class="box bg-right"><div><a href="Comunicaciones.html">Centro de Comunicaciones</a></div></div>
           </div>
 
         </div> 
