--- a/Noticia2.html
+++ b/Noticia2.html
@@ -83,9 +83,9 @@
 
         <nav class="navbar navbar-expand-lg navbar-light  nav-bar-menu ">
 
-          <img align="left" class="logo-min" 
+        <a href="index.html"> <img align="left" class="logo-min" 
          src="https://www.minsalud.gov.co/LogosInstitucionales/logo-gobierno-Ministerio-de-Salud-y-Proteccion-Social-minsalud.png" 
-         alt="Ministerio de Salud">
+         alt="Ministerio de Salud"> </a>
             
              <button class="navbar-toggler navbar-toggler-right  button-bar-menu" type="button" 
                     data-toggle="collapse" data-target="#navbarSupportedContent_mega" 
@@ -644,7 +644,7 @@
         
       <div class="grid2x">
         <div class="box bg-left"><div><a href="#">Servicio al Cliente</a></div></div>
-        <div class="box bg-right"><div><a href="#">Centro de Comunicaciones</a></div></div>
+        <div class="box bg-right"><div><a href="Comunicaciones.html">Centro de Comunicaciones</a></div></div>
       </div>
 
     </div>  
