--- a/index.html
+++ b/index.html
@@ -105,9 +105,9 @@
 
       <nav class="navbar navbar-expand-lg navbar-light  nav-bar-menu ">
 
-         <img align="left" class="logo-min" 
+         <a href="index.html"> <img align="left" class="logo-min" 
          src="https://www.minsalud.gov.co/LogosInstitucionales/logo-gobierno-Ministerio-de-Salud-y-Proteccion-Social-minsalud.png" 
-         alt="Ministerio de Salud"> 
+         alt="Ministerio de Salud"> </a>
           
             <button class="navbar-toggler navbar-toggler-right button-bar-menu"  type="button" 
                   data-toggle="collapse" data-target="#navbarSupportedContent_mega" 
