--- a/Noticia4.html
+++ b/Noticia4.html
@@ -81,7 +81,7 @@
         
         <!-- Main Menú -->
 
-         <nav class="navbar navbar-expand-lg navbar-light  nav-bar-menu ">
+          <nav class="navbar navbar-expand-lg navbar-light  nav-bar-menu ">
 
          <a href="index.html"> <img align="left" class="logo-min" 
          src="https://www.minsalud.gov.co/LogosInstitucionales/logo-gobierno-Ministerio-de-Salud-y-Proteccion-Social-minsalud.png" 
@@ -210,7 +210,7 @@
                                                       <li><a href="#">Pensiones</a></li> 
                                                   </ul>-->
 
-                                                  <div id="showgrid_submenu">
+                                                  <div id="showgrid_submenu" class="list-unstyled">
 
                                                     <div class="row row_submenu">
                                                       <div class="column_submenu">
@@ -284,7 +284,7 @@
                                                         <li><a href="#">Género</a></li>
                                                     </ul> -->
 
-                                                  <div id="showgrid_submenu">
+                                                  <div id="showgrid_submenu" class="list-unstyled">
 
                                                       <div class="row row_submenu">
                                                         <div class="column column_submenu_3tipo">
