--- a/Noticia3.html
+++ b/Noticia3.html
@@ -210,7 +210,7 @@
                                                       <li><a href="#">Pensiones</a></li> 
                                                   </ul>-->
 
-                                                  <div id="showgrid_submenu">
+                                                  <div id="showgrid_submenu" class="list-unstyled">
 
                                                     <div class="row row_submenu">
                                                       <div class="column_submenu">
@@ -284,7 +284,7 @@
                                                         <li><a href="#">Género</a></li>
                                                     </ul> -->
 
-                                                  <div id="showgrid_submenu">
+                                                  <div id="showgrid_submenu" class="list-unstyled">
 
                                                       <div class="row row_submenu">
                                                         <div class="column column_submenu_3tipo">
