--- a/index.html
+++ b/index.html
@@ -656,28 +656,34 @@
           <h3>Enlaces de interes</h3>
           <span class="mini-underline"></span>
         </div>  
-
+ 
+          <div class="container pt-5">
+ 
+ 
+ 
           <section class="center slider">
             <div>
-              <a href=""><img src="img/tramites-y-servicios.jpg"></a>
+              <a href="http://tramites.minsalud.gov.co/tramitesservicios/" target="_blank"><img src="img/tramites-y-servicios.jpg"></a>
             </div>
             <div>
-              <a href=""><img src="img/banner-gestion-plan-decenal.jpg"></a>
+              <a href="https://www.minsalud.gov.co/salud/publica/epidemiologia/Paginas/cargue-planes-territoriales-de-salud.aspx" target="_blank"><img src="img/banner-gestion-plan-decenal.jpg"></a>
             </div>
             <div>
-              <a href=""><img src="img/btn-acuerdo-punto-final.jpg"></a>
+              <a href="https://sig.sispro.gov.co/acuerdopuntofinal/" target="_blank"><img src="img/btn-acuerdo-punto-final.jpg"></a>
             </div>
             <div>
-              <a href=""><img src="img/btn-asigncion-de-eps.jpg"></a>
+              <a href="https://www.minsalud.gov.co/Paginas/Consulta-Afiliados.aspx" target="_blank"><img src="img/btn-asigncion-de-eps.jpg"></a>
             </div>
             <div>
-              <a href=""><img src="img/btn-covinformate.jpg"></a>
+              <a href="https://www.minsalud.gov.co/salud/MT/Paginas/Covinformate.aspx" target="_blank"><img src="img/btn-covinformate.jpg"></a>
             </div>
             <div>
-              <a href=""><img src="img/btn-supersalud.png"></a>
+              <a href="https://www.minsalud.gov.co/Paginas/INVITACION-GENERAL-A-LA-CIUDADANIA-Decreto-No.-642-de-2020.aspx" target="_blank"><img src="img/btn-supersalud.png"></a>
             </div> 
              
           </section>
+
+        </div> 
 
       </section>
 
