--- a/Interna Salud.html
+++ b/Interna Salud.html
@@ -1405,11 +1405,16 @@ body #scene #right-zone {
           
         <!-- Footer Fixed Mobile -->
 
-      <div class="footer-fixed bg-secondary"> 
+        <!-- Footer Fixed Mobile -->
+      <div class="footer-fixed bg-primary "> 
           
         <div class="grid2x">
-          <div class="box"><div><a href="#">Servicio al Cliente</a></div></div>
-          <div class="box"><div><a href="#">Centro de Comunicaciones</a></div></div>
+          <div class="box bg-left">
+            <div>
+                <a href="Comunicaciones.html">Centro de Comunicaciones</a></div></div>
+          <div class="box bg-right">
+            <div>
+                                  <a href="#">Atención al Ciudadano</a></div></div>
         </div>
 
       </div> 
