--- a/Noticia2.html
+++ b/Noticia2.html
@@ -78,6 +78,9 @@
                         </li>   
                         
                     </ul> 
+                     <div>
+                      <a href="funcionarios.html" class="funcionarios">Funcionarios</a>
+                    </div>
                     <ul class="navbar-nav ml-auto"> 
                         <li class="nav-item servicio-li">
                             <a class="nav-link nav-link-servicio" href="#">Atención al Ciudadano <img src="img/click2.png" width="30px" alt=""></a>
