--- a/Interna Salud.html
+++ b/Interna Salud.html
@@ -220,7 +220,7 @@ body #scene #left-zone {
   display: flex;
   width: 280px;
   -webkit-box-align: center;
-          align-items: center;
+          align-items: justify;
   -webkit-box-pack: left;
           justify-content: left;
 }
@@ -244,7 +244,7 @@ body #scene #left-zone .list li.item input[type="radio"] ~ label {
   display: block;
   opacity: 0.5;
   height: 50px;
-  text-align: center;
+  text-align: justify;
   line-height: 50px;
 }
 body #scene #left-zone .list li.item input[type="radio"] ~ label:first-letter {
@@ -1207,7 +1207,7 @@ body #scene #right-zone {
       <ul class="list">
         <li class="item">
           <input type="radio" id="radio_The garden strawberry (or simply strawberry /ˈstrɔːbᵊri/; Fragaria × ananassa) is a widely grown hybrid species of the genus Fragaria (collectively known as the strawberries)" name="basic_carousel" value="The garden strawberry (or simply strawberry /ˈstrɔːbᵊri/; Fragaria × ananassa) is a widely grown hybrid species of the genus Fragaria (collectively known as the strawberries)" checked="checked"/>
-          <label class="label_strawberry" for="radio_The garden strawberry (or simply strawberry /ˈstrɔːbᵊri/; Fragaria × ananassa) is a widely grown hybrid species of the genus Fragaria (collectively known as the strawberries)">Copagos ​y​​ Cuotas Moderadoras</label>
+          <label class="label_strawberry" for="radio_The garden strawberry (or simply strawberry /ˈstrɔːbᵊri/; Fragaria × ananassa) is a widely grown hybrid species of the genus Fragaria (collectively known as the strawberries)"><p style="margin-left:60px;">Copagos ​y​​ Cuotas Moderadoras</p></label>
           <div class="content content_strawberry"><!--<span class="picto"></span>-->
             <h5>Copagos ​y​​ Cuotas Moderadoras</h5>
 <iframe width="700" height="300" src="https://www.minsalud.gov.co/sites/rid/Lists/BibliotecaDigital/RIDE/VP/DOA/cuotas-moderadoras-copagos-2021.pdf" frameborder="0"></iframe>
@@ -1215,7 +1215,7 @@ body #scene #right-zone {
         </li>
         <li class="item">
           <input type="radio" id="radio_A banana is an edible fruit, botanically a berry, produced by several kinds of large herbaceous flowering plants in the genus Musa." name="basic_carousel" value="A banana is an edible fruit, botanically a berry, produced by several kinds of large herbaceous flowering plants in the genus Musa."/>
-          <label class="label_banana" for="radio_A banana is an edible fruit, botanically a berry, produced by several kinds of large herbaceous flowering plants in the genus Musa.">Exclusiones</label>
+          <label class="label_banana" for="radio_A banana is an edible fruit, botanically a berry, produced by several kinds of large herbaceous flowering plants in the genus Musa."><p style="margin-left:60px;">Exclusiones</p></label>
           <div class="content content_banana"><!--<span class="picto"></span>-->
             <h5>Exclusiones </h5>
 <iframe width="700" height="300" src="https://www.minsalud.gov.co/Normatividad_Nuevo/Resoluci%c3%b3n%20No.%20244%20de%202019.pdf" frameborder="0"></iframe>
