--- a/index.html
+++ b/index.html
@@ -848,14 +848,14 @@
       <div class="multimedia mt-2 pb-5"> 
 
         <div class="row">
-          <div class="col">
+          <div class="col-sm">
             <div class="p-3">
                 <h4>Instagram</h4>
                 <span class="mini-underline-multimedia"></span>
             </div> 
             <iframe style="    height: 210px;" class="instagram-media instagram-media-rendered" id="instagram-embed-0" src="https://www.instagram.com/p/B-iDlphhqQm/embed/captioned/?cr=1&amp;v=13&amp;wp=391&amp;rd=http%3A%2F%2F127.0.0.1%3A5500&amp;rp=%2Findex.html#%7B%22ci%22%3A0%2C%22os%22%3A1067.0399999944493%2C%22ls%22%3A976.8949999997858%2C%22le%22%3A1037.6150000083726%7D" allowtransparency="true" allowfullscreen="true" frameborder="0" height="732" data-instgrm-payload-id="instagram-media-payload-0" scrolling="no" style="background: white;max-width: 476px;width: calc(100% - 2px);border-radius: 3px;border: 1px solid rgb(219, 219, 219);box-shadow: none;display: block;margin: 0px 0px 12px;min-width: 326px;padding: 0px;"></iframe>
           </div>
-          <div class="col">
+          <div class="col-sm">
             <div class="p-3">
                 <h4>Videos</h4>
                 <span class="mini-underline-multimedia"></span>
@@ -865,7 +865,7 @@
               
             
           </div>
-          <div class="col">
+          <div class="col-sm">
             <div class="p-3">
                 <h4>Twitter</h4>
                 <span class="mini-underline-multimedia"></span>
