--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
   <script type="text/javascript" src="js/Calendario/jquery.e-calendar.js"></script>
   <script type="text/javascript" src="js/Calendario/index.js"></script>
   
-  <link rel="stylesheet" href="/css/Calendario/jquery.e-calendar.css"/>
+  <link rel="stylesheet" href="/css/Calendario/jq-calendar.css"/>
  <!-- Fin Calendario -->
     
 
