--- a/Transparencia.html
+++ b/Transparencia.html
@@ -698,7 +698,7 @@ body #scene #right-zone {
 
                                                     <div class="col-lg-4">
                                                           <ul class=" list-unstyled">
-                                                            <li><a href="Salud.html">Boletines</a></li>
+                                                            <li><a href="Interna Salud.html">Boletines</a></li>
                                                             <li><a href="Salud.html">Monitoreo</a></li>  
                                                             <li><a href="Salud.html">Resultados Plan de Beneficios en Salud</a></li>
                                                             <li><a href="Salud.html">Participe y opine en la actualización</a></li>
