--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
 
                                                     <div class="col-lg-4">
                                                           <ul class=" list-unstyled">
-                                                            <li><a href="Salud.html">Boletines</a></li>
+                                                            <li><a href="Interna Salud.html">Boletines</a></li>
                                                             <li><a href="Salud.html">Monitoreo</a></li>  
                                                             <li><a href="Salud.html">Resultados Plan de Beneficios en Salud</a></li>
                                                             <li><a href="Salud.html">Participe y opine en la actualización</a></li>
