--- a/Noticia2.html
+++ b/Noticia2.html
@@ -4,6 +4,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="theme-color" content="#3563d3" />
 
     <!-- Fonts Work Sans 300 400 500 CSS -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
