--- a/index.html
+++ b/index.html
@@ -105,10 +105,10 @@
                   </ul> 
                   <ul class="navbar-nav ml-auto"> 
                      <li class="nav-item servicio-li">
-                          <a class="nav-link nav-link-servicio" href="#">Centro de comunicaciones</a> 
+                          <a class="nav-link nav-link-servicio" href="#" style="padding-top:12px;">Centro de comunicaciones</a> 
                       </li>  
                       <li class="nav-item servicio-li">
-                          <a class="nav-link nav-link-servicio" href="#">Atención al Ciudadano </a><img src="img/click2.png" width="30px" alt=""> 
+                          <a class="nav-link nav-link-servicio" href="#">Atención al Ciudadano <img src="img/click2.png" width="30px" alt=""> </a>
                       </li> 
                       
                       
@@ -1543,12 +1543,12 @@
       <div class="grid2x">
         <div class="box bg-left">
           <div>
-              <a href="Transparencia.html">Transparencia</a>
+              <a href="Transparencia.html" >Transparencia</a>
           </div>
         </div>
         <div class="box bg-right">
           <div>
-            <a href="#">Atención al Ciudadano</a>
+            <a href="#">Atención al <br> Ciudadano</a>
           </div>
         </div>
       </div>
