--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                   </ul> 
                   <ul class="navbar-nav ml-auto"> 
                      <li class="nav-item servicio-li">
-                          <a class="nav-link nav-link-servicio" href="#" style="padding-top:12px;">Centro de comunicaciones</a> 
+                          <a class="nav-link nav-link-servicio" href="Comunicaciones.html" style="padding-top:12px;">Centro de comunicaciones</a> 
                       </li>  
                       <li class="nav-item servicio-li">
                           <a class="nav-link nav-link-servicio" href="#">Atención al Ciudadano <img src="img/click2.png" width="30px" alt=""> </a>
@@ -942,7 +942,7 @@
                                                 
                                                   <div class="col-lg-12"> 
                                                     <ul class="list-unstyled">
-                                                        <li><a href="#">Transparencia</a></li> 
+                                                        <li><a href="Transparencia.html">Transparencia</a></li> 
                                                     </ul>
                                                   </div> 
                                                   
