--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
 
                                               <div class="titulo-menu-mobile">
                                                 <span class="span-arrow"></span> 
-                                                <a href="Interna Interna Salud.html" class="">Plan de Beneficios en Salud</a>
+                                                <a href="Interna Interna.html" class="">Plan de Beneficios en Salud</a>
                                               </div>   
 
                                           </li>
@@ -433,7 +433,7 @@
 
                                                 <div class="col-lg-4"> 
                                                   <ul class="list-unstyled">
-                                                      <li><a href="Interna Interna Salud.html">Estilos saludables​</a></li>
+                                                      <li><a href="Interna Salud.html">Estilos saludables​</a></li>
                                                       <li><a href="Interna Salud.html">Poblaciones vulnerables​</a></li>
                                                       <li><a href="Interna Salud.html">Enfermedades transmisibles​​​​</a></li>
                                                       <li><a href="Interna Salud.html">Enfermedades no transmisibles​</a></li>
@@ -469,7 +469,7 @@
 
                                                     <div class="col-lg-4">
                                                           <ul class=" list-unstyled">
-                                                            <li><a href="Interna Interna Salud.html">Boletines</a></li>
+                                                            <li><a href="Interna Salud.html">Boletines</a></li>
                                                             <li><a href="Interna Salud.html">Monitoreo</a></li>  
                                                             <li><a href="Interna Salud.html">Resultados Plan de Beneficios en Salud</a></li>
                                                             <li><a href="Interna Salud.html">Participe y opine en la actualización</a></li>
