--- a/Noticia1.html
+++ b/Noticia1.html
@@ -367,7 +367,7 @@
 
                                               <div class="titulo-menu-mobile">
                                                 <span class="span-arrow"></span> 
-                                                <a href="Interna Interna Salud.html" class="">Plan de Beneficios en Salud</a>
+                                                <a href="Interna Interna.html" class="">Plan de Beneficios en Salud</a>
                                               </div>   
 
                                           </li>
@@ -421,7 +421,7 @@
 
                                                 <div class="col-lg-4"> 
                                                   <ul class="list-unstyled">
-                                                      <li><a href="Interna Interna Salud.html">Estilos saludables​</a></li>
+                                                      <li><a href="Interna Salud.html">Estilos saludables​</a></li>
                                                       <li><a href="Interna Salud.html">Poblaciones vulnerables​</a></li>
                                                       <li><a href="Interna Salud.html">Enfermedades transmisibles​​​​</a></li>
                                                       <li><a href="Interna Salud.html">Enfermedades no transmisibles​</a></li>
@@ -457,7 +457,7 @@
 
                                                     <div class="col-lg-4">
                                                           <ul class=" list-unstyled">
-                                                            <li><a href="Interna Interna Salud.html">Boletines</a></li>
+                                                            <li><a href="Interna Salud.html">Boletines</a></li>
                                                             <li><a href="Interna Salud.html">Monitoreo</a></li>  
                                                             <li><a href="Interna Salud.html">Resultados Plan de Beneficios en Salud</a></li>
                                                             <li><a href="Interna Salud.html">Participe y opine en la actualización</a></li>
@@ -831,7 +831,7 @@
         </div>
 
     </nav>
-  </header>  
+  </header>   
   <!--Side bar-->
   <div class="sidenav">  
       <a id="boton"><img src="https://www.mintic.gov.co/portal/604/channels-507_icon_contrast.png" alt=""></a>  
