--- a/Salud.html
+++ b/Salud.html
@@ -1173,9 +1173,9 @@ body #scene #right-zone {
                   <div style=" font-family:Arial, Helvetica, Verdana; font-weight: bold; background-color: #c3c8cc; width:115px; height:120px; float:left;  margin-left:25px; "><center><img src="https://d30y9cdsu7xlg0.cloudfront.net/png/9636-200.png"  style="width:50px;" alt="Icono" style="width:50px;" /></center><center><a href="/salud/MT/Paginas/medicamentos-y-tecnologias.aspx" style="text-decoration:none;">Medicamentos </a></div>
                   <div style=" font-family:Arial, Helvetica, Verdana; font-weight: bold; background-color: #c3c8cc; width:115px; height:120px; float:left; margin-left:45px; "><center><img src="https://d30y9cdsu7xlg0.cloudfront.net/png/9636-200.png"  style="width:50px;" alt="Icono" style="width:50px;" /></center><center><a href="#">De interés</a></center> </div>
                   
-                  <!--separador-->
+                  <!--separador
                   <div style=" font-family:Arial, Helvetica, Verdana; font-weight: bold; width:280px; height:10px; float:left; margin-left:180px; "></div>
-
+-->
 <!--separador-->								
 									
 		        	</div>
@@ -1285,6 +1285,7 @@ body #scene #right-zone {
 </div> 
   <!--contenido-->
    <!-- Footer Enlaces Min --> 
+   
     <div class="container ministerio-zone mt-4">
         <div class="pb-4">
           <img class="img-enlaces-mobile" src="https://www.mintransporte.gov.co/info/mintransporte/media/galeria8781.png" alt="">   
