--- a/Interna Salud.html
+++ b/Interna Salud.html
@@ -1692,7 +1692,7 @@ body #scene #right-zone {
     </footer>  
       
      <!-- Footer Fixed Mobile -->
-    <footer class="footer-fixed bg-primary" id="footer-fixed" style="width:410px;"> 
+    <footer class="footer-fixed bg-primary" id="footer-fixed" > 
         
       <div class="grid2x" >
         <div class="box bg-left">
