--- a/Noticia4.html
+++ b/Noticia4.html
@@ -49,6 +49,7 @@
   </head>
     <body> 
 
+   
   <header> 
     <!-- Min RIP -->
     <nav class="navbar navbar-expand-lg navbar-light nav-gov">
@@ -371,7 +372,7 @@
 
                                               <div class="titulo-menu-mobile">
                                                 <span class="span-arrow"></span> 
-                                                <a href="Interna Interna Salud.html" class="">Plan de Beneficios en Salud</a>
+                                                <a href="Interna Salud.html" class="">Plan de Beneficios en Salud</a>
                                               </div>   
 
                                           </li>
@@ -425,7 +426,7 @@
 
                                                 <div class="col-lg-4"> 
                                                   <ul class="list-unstyled">
-                                                      <li><a href="Interna Interna Salud.html">Estilos saludables​</a></li>
+                                                      <li><a href="Interna Salud.html">Estilos saludables​</a></li>
                                                       <li><a href="Interna Salud.html">Poblaciones vulnerables​</a></li>
                                                       <li><a href="Interna Salud.html">Enfermedades transmisibles​​​​</a></li>
                                                       <li><a href="Interna Salud.html">Enfermedades no transmisibles​</a></li>
@@ -461,7 +462,7 @@
 
                                                     <div class="col-lg-4">
                                                           <ul class=" list-unstyled">
-                                                            <li><a href="Interna Interna Salud.html">Boletines</a></li>
+                                                            <li><a href="Interna Salud.html">Boletines</a></li>
                                                             <li><a href="Interna Salud.html">Monitoreo</a></li>  
                                                             <li><a href="Interna Salud.html">Resultados Plan de Beneficios en Salud</a></li>
                                                             <li><a href="Interna Salud.html">Participe y opine en la actualización</a></li>
@@ -835,7 +836,7 @@
         </div>
 
     </nav>
-  </header>  
+  </header>   
 
       <!--Side bar-->
   <div class="sidenav">  
