--- a/Salud.html
+++ b/Salud.html
@@ -340,7 +340,7 @@ body #scene #right-zone {
 <body id="page" class="mitexto"> 
 
 
-   <header> 
+  <header> 
     <!-- Min RIP -->
     <nav class="navbar navbar-expand-lg navbar-light nav-gov">
 
@@ -662,7 +662,7 @@ body #scene #right-zone {
 
                                               <div class="titulo-menu-mobile">
                                                 <span class="span-arrow"></span> 
-                                                <a href="Interna Interna Salud.html" class="">Plan de Beneficios en Salud</a>
+                                                <a href="Interna Salud.html" class="">Plan de Beneficios en Salud</a>
                                               </div>   
 
                                           </li>
@@ -716,7 +716,7 @@ body #scene #right-zone {
 
                                                 <div class="col-lg-4"> 
                                                   <ul class="list-unstyled">
-                                                      <li><a href="Interna Interna Salud.html">Estilos saludables​</a></li>
+                                                      <li><a href="Interna Salud.html">Estilos saludables​</a></li>
                                                       <li><a href="Interna Salud.html">Poblaciones vulnerables​</a></li>
                                                       <li><a href="Interna Salud.html">Enfermedades transmisibles​​​​</a></li>
                                                       <li><a href="Interna Salud.html">Enfermedades no transmisibles​</a></li>
@@ -752,7 +752,7 @@ body #scene #right-zone {
 
                                                     <div class="col-lg-4">
                                                           <ul class=" list-unstyled">
-                                                            <li><a href="Interna Interna Salud.html">Boletines</a></li>
+                                                            <li><a href="Interna Salud.html">Boletines</a></li>
                                                             <li><a href="Interna Salud.html">Monitoreo</a></li>  
                                                             <li><a href="Interna Salud.html">Resultados Plan de Beneficios en Salud</a></li>
                                                             <li><a href="Interna Salud.html">Participe y opine en la actualización</a></li>
