--- a/Transparencia.html
+++ b/Transparencia.html
@@ -818,7 +818,7 @@ body #scene #right-zone {
 
                                               <div class="titulo-menu-mobile">
                                                 <span class="span-arrow"></span> 
-                                                <a href="Interna Interna Salud.html" class="">Plan de Beneficios en Salud</a>
+                                                <a href="Interna Salud.html" class="">Plan de Beneficios en Salud</a>
                                               </div>   
 
                                           </li>
@@ -872,7 +872,7 @@ body #scene #right-zone {
 
                                                 <div class="col-lg-4"> 
                                                   <ul class="list-unstyled">
-                                                      <li><a href="Interna Interna Salud.html">Estilos saludables​</a></li>
+                                                      <li><a href="Interna Salud.html">Estilos saludables​</a></li>
                                                       <li><a href="Interna Salud.html">Poblaciones vulnerables​</a></li>
                                                       <li><a href="Interna Salud.html">Enfermedades transmisibles​​​​</a></li>
                                                       <li><a href="Interna Salud.html">Enfermedades no transmisibles​</a></li>
@@ -908,7 +908,7 @@ body #scene #right-zone {
 
                                                     <div class="col-lg-4">
                                                           <ul class=" list-unstyled">
-                                                            <li><a href="Interna Interna Salud.html">Boletines</a></li>
+                                                            <li><a href="Interna Salud.html">Boletines</a></li>
                                                             <li><a href="Interna Salud.html">Monitoreo</a></li>  
                                                             <li><a href="Interna Salud.html">Resultados Plan de Beneficios en Salud</a></li>
                                                             <li><a href="Interna Salud.html">Participe y opine en la actualización</a></li>
@@ -1282,7 +1282,7 @@ body #scene #right-zone {
         </div>
 
     </nav>
-  </header>  
+  </header>    
   
   
   <!--Side bar-->
