--- a/Noticia1.html
+++ b/Noticia1.html
@@ -253,16 +253,16 @@
                                                   <a class="nav-link active show titulo-menu-desktop" data-toggle="tab" href="#tab-12"><span class="span-arrow"></span> Titulo 1</a>
 
                                                     <div class="titulo-menu-mobile ">
-                                                    <span class="span-arrow"></span> 
-                                                    <a href="Interna Salud.html" class="">Titulo 1</a>
-                                                  </div>  
+                                                      <span class="span-arrow"></span> 
+                                                      <a href="salud-menu.html" class="">Titulo 1</a>
+                                                    </div>  
                                               </li>
                                               <li class="nav-item">
                                                   <a class="nav-link titulo-menu-desktop" data-toggle="tab" href="#tab-22"><span class="span-arrow"></span>Titulo 2</a>
 
                                                     <div class="titulo-menu-mobile">
                                                     <span class="span-arrow"></span> 
-                                                    <a href="Interna Salud.html" class="">Titulo 3</a>
+                                                    <a href="salud-menu.html" class="">Titulo 3</a>
                                                   </div>  
 
                                               </li>
@@ -271,7 +271,7 @@
 
                                                     <div class="titulo-menu-mobile">
                                                     <span class="span-arrow"></span> 
-                                                    <a href="Interna Salud.html" class="">Titulo 3</a>
+                                                    <a href="salud-menu.html" class="">Titulo 3</a>
                                                   </div>  
                                               </li> 
                                           </ul>
@@ -286,8 +286,8 @@
                                                   <div class="col-lg-4"> 
                                                     <ul class="list-unstyled">
                                                         <li><a href="Interna Salud.html">Enlace 1</a></li>
-                                                          <li><a href="Interna Salud.html">Enlace 2</a></li>
-                                                          <li><a href="Interna Salud.html">Enlace 3</a></li>
+                                                        <li><a href="Interna Salud.html">Enlace 2</a></li>
+                                                        <li><a href="Interna Salud.html">Enlace 3</a></li>
                                                     </ul>
                                                   </div>
                                                     
@@ -359,8 +359,8 @@
                                               <span class="span-arrow"></span>Salud pública</a>
 
                                               <div class="titulo-menu-mobile">
-                                                <span class="span-arrow"></span> 
-                                                <a href="Interna Salud.html" class="">Salud publica</a>
+                                                  <span class="span-arrow"></span> 
+                                                  <a href="salud-menu.html" class="">Salud publica</a>
                                               </div>  
                                           </li>
                                           <li class="nav-item">
@@ -368,7 +368,7 @@
 
                                               <div class="titulo-menu-mobile">
                                                 <span class="span-arrow"></span> 
-                                                <a href="Interna Salud.html" class="">Plan de Beneficios en Salud</a>
+                                                <a href="salud-menu.html" class="">Plan de Beneficios en Salud</a>
                                               </div>   
 
                                           </li>
@@ -377,7 +377,7 @@
 
                                                 <div class="titulo-menu-mobile">
                                                 <span class="span-arrow"></span> 
-                                                <a href="Interna Salud.html" class="">Prestación de servicios</a>
+                                                <a href="salud-menu.html" class="">Prestación de servicios</a>
                                               </div>   
 
 
@@ -387,7 +387,7 @@
 
                                               <div class="titulo-menu-mobile">
                                                 <span class="span-arrow"></span> 
-                                                <a href="Interna Salud.html" class="">Calidad de atención en salud</a>
+                                                <a href="salud-menu.html" class="">Calidad de atención en salud</a>
                                               </div>   
 
                                           </li>
@@ -396,7 +396,7 @@
 
                                               <div class="titulo-menu-mobile">
                                                 <span class="span-arrow"></span> 
-                                                <a href="Interna Salud.html" class="">Medicamentos y tecnologías</a>
+                                                <a href="salud-menu.html" class="">Medicamentos y tecnologías</a>
                                               </div>   
 
 
@@ -406,7 +406,7 @@
 
                                             <div class="titulo-menu-mobile">
                                                 <span class="span-arrow"></span> 
-                                                <a href="Interna Salud.html" class="">Profesiones y ocupaciones</a>
+                                                <a href="salud-menu.html" class="">Profesiones y ocupaciones</a>
                                               </div>   
 
                                           </li>
@@ -582,8 +582,7 @@
                               </div>
                             </section>
                         </div> 
-                    </li> 
-
+                    </li>  
 
                    <!--  Proteccion Social -->
                     <li class="nav-item dropdown has-megamenu"> 
@@ -601,9 +600,9 @@
 
 
                                                       <div class="titulo-menu-mobile">
-                                                <span class="span-arrow"></span> 
-                                                <a href="Interna Salud.html" class="">Aseguramiento</a>
-                                              </div>  
+                                                      <span class="span-arrow"></span> 
+                                                      <a href="salud-menu.html" class="">Aseguramiento</a>
+                                                    </div>  
 
 
                                               </li>
@@ -612,9 +611,9 @@
                                                   <a class="nav-link titulo-menu-desktop" data-toggle="tab" href="#tab-21"><span class="span-arrow"></span>Financiamiento</a>
 
                                                       <div class="titulo-menu-mobile">
-                                                <span class="span-arrow"></span> 
-                                                <a href="Interna Salud.html" class="">Financiamiento</a>
-                                              </div>  
+                                                        <span class="span-arrow"></span> 
+                                                        <a href="salud-menu.html" class="">Financiamiento</a>
+                                                      </div>  
 
                                               </li>
                                               <li class="nav-item">
@@ -622,9 +621,9 @@
                                                   <a class="nav-link titulo-menu-desktop" data-toggle="tab" href="#tab-31"><span class="span-arrow"></span>Promoción social</a>
 
                                                       <div class="titulo-menu-mobile">
-                                                <span class="span-arrow"></span> 
-                                                <a href="Interna Salud.html" class="">Promoción social</a>
-                                              </div>  
+                                                        <span class="span-arrow"></span> 
+                                                        <a href="salud-menu.html" class="">Promoción social</a>
+                                                      </div>  
 
 
                                               </li> 
@@ -702,7 +701,6 @@
                             </section>     
                       </div>  
                     </li> 
-
 
                     <li class="nav-item no-desktop">
                         <a class="nav-link" href="Comunicaciones.html"><span class="span-menu-title">Centro de comunicaciones</span></a>
