--- a/Noticia2.html
+++ b/Noticia2.html
@@ -256,16 +256,16 @@
                                                   <a class="nav-link active show titulo-menu-desktop" data-toggle="tab" href="#tab-12"><span class="span-arrow"></span> Titulo 1</a>
 
                                                     <div class="titulo-menu-mobile ">
-                                                    <span class="span-arrow"></span> 
-                                                    <a href="Interna Salud.html" class="">Titulo 1</a>
-                                                  </div>  
+                                                      <span class="span-arrow"></span> 
+                                                      <a href="salud-menu.html" class="">Titulo 1</a>
+                                                    </div>  
                                               </li>
                                               <li class="nav-item">
                                                   <a class="nav-link titulo-menu-desktop" data-toggle="tab" href="#tab-22"><span class="span-arrow"></span>Titulo 2</a>
 
                                                     <div class="titulo-menu-mobile">
                                                     <span class="span-arrow"></span> 
-                                                    <a href="Interna Salud.html" class="">Titulo 3</a>
+                                                    <a href="salud-menu.html" class="">Titulo 3</a>
                                                   </div>  
 
                                               </li>
@@ -274,7 +274,7 @@
 
                                                     <div class="titulo-menu-mobile">
                                                     <span class="span-arrow"></span> 
-                                                    <a href="Interna Salud.html" class="">Titulo 3</a>
+                                                    <a href="salud-menu.html" class="">Titulo 3</a>
                                                   </div>  
                                               </li> 
                                           </ul>
@@ -289,8 +289,8 @@
                                                   <div class="col-lg-4"> 
                                                     <ul class="list-unstyled">
                                                         <li><a href="Interna Salud.html">Enlace 1</a></li>
-                                                          <li><a href="Interna Salud.html">Enlace 2</a></li>
-                                                          <li><a href="Interna Salud.html">Enlace 3</a></li>
+                                                        <li><a href="Interna Salud.html">Enlace 2</a></li>
+                                                        <li><a href="Interna Salud.html">Enlace 3</a></li>
                                                     </ul>
                                                   </div>
                                                     
@@ -362,8 +362,8 @@
                                               <span class="span-arrow"></span>Salud pública</a>
 
                                               <div class="titulo-menu-mobile">
-                                                <span class="span-arrow"></span> 
-                                                <a href="Interna Salud.html" class="">Salud publica</a>
+                                                  <span class="span-arrow"></span> 
+                                                  <a href="salud-menu.html" class="">Salud publica</a>
                                               </div>  
                                           </li>
                                           <li class="nav-item">
@@ -371,7 +371,7 @@
 
                                               <div class="titulo-menu-mobile">
                                                 <span class="span-arrow"></span> 
-                                                <a href="Interna Salud.html" class="">Plan de Beneficios en Salud</a>
+                                                <a href="salud-menu.html" class="">Plan de Beneficios en Salud</a>
                                               </div>   
 
                                           </li>
@@ -380,7 +380,7 @@
 
                                                 <div class="titulo-menu-mobile">
                                                 <span class="span-arrow"></span> 
-                                                <a href="Interna Salud.html" class="">Prestación de servicios</a>
+                                                <a href="salud-menu.html" class="">Prestación de servicios</a>
                                               </div>   
 
 
@@ -390,7 +390,7 @@
 
                                               <div class="titulo-menu-mobile">
                                                 <span class="span-arrow"></span> 
-                                                <a href="Interna Salud.html" class="">Calidad de atención en salud</a>
+                                                <a href="salud-menu.html" class="">Calidad de atención en salud</a>
                                               </div>   
 
                                           </li>
@@ -399,7 +399,7 @@
 
                                               <div class="titulo-menu-mobile">
                                                 <span class="span-arrow"></span> 
-                                                <a href="Interna Salud.html" class="">Medicamentos y tecnologías</a>
+                                                <a href="salud-menu.html" class="">Medicamentos y tecnologías</a>
                                               </div>   
 
 
@@ -409,7 +409,7 @@
 
                                             <div class="titulo-menu-mobile">
                                                 <span class="span-arrow"></span> 
-                                                <a href="Interna Salud.html" class="">Profesiones y ocupaciones</a>
+                                                <a href="salud-menu.html" class="">Profesiones y ocupaciones</a>
                                               </div>   
 
                                           </li>
@@ -585,8 +585,7 @@
                               </div>
                             </section>
                         </div> 
-                    </li> 
-
+                    </li>  
 
                    <!--  Proteccion Social -->
                     <li class="nav-item dropdown has-megamenu"> 
@@ -604,9 +603,9 @@
 
 
                                                       <div class="titulo-menu-mobile">
-                                                <span class="span-arrow"></span> 
-                                                <a href="Interna Salud.html" class="">Aseguramiento</a>
-                                              </div>  
+                                                      <span class="span-arrow"></span> 
+                                                      <a href="salud-menu.html" class="">Aseguramiento</a>
+                                                    </div>  
 
 
                                               </li>
@@ -615,9 +614,9 @@
                                                   <a class="nav-link titulo-menu-desktop" data-toggle="tab" href="#tab-21"><span class="span-arrow"></span>Financiamiento</a>
 
                                                       <div class="titulo-menu-mobile">
-                                                <span class="span-arrow"></span> 
-                                                <a href="Interna Salud.html" class="">Financiamiento</a>
-                                              </div>  
+                                                        <span class="span-arrow"></span> 
+                                                        <a href="salud-menu.html" class="">Financiamiento</a>
+                                                      </div>  
 
                                               </li>
                                               <li class="nav-item">
@@ -625,9 +624,9 @@
                                                   <a class="nav-link titulo-menu-desktop" data-toggle="tab" href="#tab-31"><span class="span-arrow"></span>Promoción social</a>
 
                                                       <div class="titulo-menu-mobile">
-                                                <span class="span-arrow"></span> 
-                                                <a href="Interna Salud.html" class="">Promoción social</a>
-                                              </div>  
+                                                        <span class="span-arrow"></span> 
+                                                        <a href="salud-menu.html" class="">Promoción social</a>
+                                                      </div>  
 
 
                                               </li> 
@@ -705,7 +704,6 @@
                             </section>     
                       </div>  
                     </li> 
-
 
                     <li class="nav-item no-desktop">
                         <a class="nav-link" href="Comunicaciones.html"><span class="span-menu-title">Centro de comunicaciones</span></a>
