--- a/funcionarios.html
+++ b/funcionarios.html
@@ -255,16 +255,16 @@
                                                   <a class="nav-link active show titulo-menu-desktop" data-toggle="tab" href="#tab-12"><span class="span-arrow"></span> Titulo 1</a>
 
                                                     <div class="titulo-menu-mobile ">
-                                                    <span class="span-arrow"></span> 
-                                                    <a href="Interna Salud.html" class="">Titulo 1</a>
-                                                  </div>  
+                                                      <span class="span-arrow"></span> 
+                                                      <a href="salud-menu.html" class="">Titulo 1</a>
+                                                    </div>  
                                               </li>
                                               <li class="nav-item">
                                                   <a class="nav-link titulo-menu-desktop" data-toggle="tab" href="#tab-22"><span class="span-arrow"></span>Titulo 2</a>
 
                                                     <div class="titulo-menu-mobile">
                                                     <span class="span-arrow"></span> 
-                                                    <a href="Interna Salud.html" class="">Titulo 3</a>
+                                                    <a href="salud-menu.html" class="">Titulo 3</a>
                                                   </div>  
 
                                               </li>
@@ -273,7 +273,7 @@
 
                                                     <div class="titulo-menu-mobile">
                                                     <span class="span-arrow"></span> 
-                                                    <a href="Interna Salud.html" class="">Titulo 3</a>
+                                                    <a href="salud-menu.html" class="">Titulo 3</a>
                                                   </div>  
                                               </li> 
                                           </ul>
@@ -288,8 +288,8 @@
                                                   <div class="col-lg-4"> 
                                                     <ul class="list-unstyled">
                                                         <li><a href="Interna Salud.html">Enlace 1</a></li>
-                                                          <li><a href="Interna Salud.html">Enlace 2</a></li>
-                                                          <li><a href="Interna Salud.html">Enlace 3</a></li>
+                                                        <li><a href="Interna Salud.html">Enlace 2</a></li>
+                                                        <li><a href="Interna Salud.html">Enlace 3</a></li>
                                                     </ul>
                                                   </div>
                                                     
@@ -361,8 +361,8 @@
                                               <span class="span-arrow"></span>Salud pública</a>
 
                                               <div class="titulo-menu-mobile">
-                                                <span class="span-arrow"></span> 
-                                                <a href="Interna Salud.html" class="">Salud publica</a>
+                                                  <span class="span-arrow"></span> 
+                                                  <a href="salud-menu.html" class="">Salud publica</a>
                                               </div>  
                                           </li>
                                           <li class="nav-item">
@@ -370,7 +370,7 @@
 
                                               <div class="titulo-menu-mobile">
                                                 <span class="span-arrow"></span> 
-                                                <a href="Interna Salud.html" class="">Plan de Beneficios en Salud</a>
+                                                <a href="salud-menu.html" class="">Plan de Beneficios en Salud</a>
                                               </div>   
 
                                           </li>
@@ -379,7 +379,7 @@
 
                                                 <div class="titulo-menu-mobile">
                                                 <span class="span-arrow"></span> 
-                                                <a href="Interna Salud.html" class="">Prestación de servicios</a>
+                                                <a href="salud-menu.html" class="">Prestación de servicios</a>
                                               </div>   
 
 
@@ -389,7 +389,7 @@
 
                                               <div class="titulo-menu-mobile">
                                                 <span class="span-arrow"></span> 
-                                                <a href="Interna Salud.html" class="">Calidad de atención en salud</a>
+                                                <a href="salud-menu.html" class="">Calidad de atención en salud</a>
                                               </div>   
 
                                           </li>
@@ -398,7 +398,7 @@
 
                                               <div class="titulo-menu-mobile">
                                                 <span class="span-arrow"></span> 
-                                                <a href="Interna Salud.html" class="">Medicamentos y tecnologías</a>
+                                                <a href="salud-menu.html" class="">Medicamentos y tecnologías</a>
                                               </div>   
 
 
@@ -408,7 +408,7 @@
 
                                             <div class="titulo-menu-mobile">
                                                 <span class="span-arrow"></span> 
-                                                <a href="Interna Salud.html" class="">Profesiones y ocupaciones</a>
+                                                <a href="salud-menu.html" class="">Profesiones y ocupaciones</a>
                                               </div>   
 
                                           </li>
@@ -584,8 +584,7 @@
                               </div>
                             </section>
                         </div> 
-                    </li> 
-
+                    </li>  
 
                    <!--  Proteccion Social -->
                     <li class="nav-item dropdown has-megamenu"> 
@@ -603,9 +602,9 @@
 
 
                                                       <div class="titulo-menu-mobile">
-                                                <span class="span-arrow"></span> 
-                                                <a href="Interna Salud.html" class="">Aseguramiento</a>
-                                              </div>  
+                                                      <span class="span-arrow"></span> 
+                                                      <a href="salud-menu.html" class="">Aseguramiento</a>
+                                                    </div>  
 
 
                                               </li>
@@ -614,9 +613,9 @@
                                                   <a class="nav-link titulo-menu-desktop" data-toggle="tab" href="#tab-21"><span class="span-arrow"></span>Financiamiento</a>
 
                                                       <div class="titulo-menu-mobile">
-                                                <span class="span-arrow"></span> 
-                                                <a href="Interna Salud.html" class="">Financiamiento</a>
-                                              </div>  
+                                                        <span class="span-arrow"></span> 
+                                                        <a href="salud-menu.html" class="">Financiamiento</a>
+                                                      </div>  
 
                                               </li>
                                               <li class="nav-item">
@@ -624,9 +623,9 @@
                                                   <a class="nav-link titulo-menu-desktop" data-toggle="tab" href="#tab-31"><span class="span-arrow"></span>Promoción social</a>
 
                                                       <div class="titulo-menu-mobile">
-                                                <span class="span-arrow"></span> 
-                                                <a href="Interna Salud.html" class="">Promoción social</a>
-                                              </div>  
+                                                        <span class="span-arrow"></span> 
+                                                        <a href="salud-menu.html" class="">Promoción social</a>
+                                                      </div>  
 
 
                                               </li> 
@@ -704,7 +703,6 @@
                             </section>     
                       </div>  
                     </li> 
-
 
                     <li class="nav-item no-desktop">
                         <a class="nav-link" href="Comunicaciones.html"><span class="span-menu-title">Centro de comunicaciones</span></a>
