--- a/index.html
+++ b/index.html
@@ -264,16 +264,16 @@
                                                   <a class="nav-link active show titulo-menu-desktop" data-toggle="tab" href="#tab-12"><span class="span-arrow"></span> Titulo 1</a>
 
                                                     <div class="titulo-menu-mobile ">
-                                                    <span class="span-arrow"></span> 
-                                                    <a href="Interna Salud.html" class="">Titulo 1</a>
-                                                  </div>  
+                                                      <span class="span-arrow"></span> 
+                                                      <a href="salud-menu.html" class="">Titulo 1</a>
+                                                    </div>  
                                               </li>
                                               <li class="nav-item">
                                                   <a class="nav-link titulo-menu-desktop" data-toggle="tab" href="#tab-22"><span class="span-arrow"></span>Titulo 2</a>
 
                                                     <div class="titulo-menu-mobile">
                                                     <span class="span-arrow"></span> 
-                                                    <a href="Interna Salud.html" class="">Titulo 3</a>
+                                                    <a href="salud-menu.html" class="">Titulo 3</a>
                                                   </div>  
 
                                               </li>
@@ -282,7 +282,7 @@
 
                                                     <div class="titulo-menu-mobile">
                                                     <span class="span-arrow"></span> 
-                                                    <a href="Interna Salud.html" class="">Titulo 3</a>
+                                                    <a href="salud-menu.html" class="">Titulo 3</a>
                                                   </div>  
                                               </li> 
                                           </ul>
@@ -297,8 +297,8 @@
                                                   <div class="col-lg-4"> 
                                                     <ul class="list-unstyled">
                                                         <li><a href="Interna Salud.html">Enlace 1</a></li>
-                                                          <li><a href="Interna Salud.html">Enlace 2</a></li>
-                                                          <li><a href="Interna Salud.html">Enlace 3</a></li>
+                                                        <li><a href="Interna Salud.html">Enlace 2</a></li>
+                                                        <li><a href="Interna Salud.html">Enlace 3</a></li>
                                                     </ul>
                                                   </div>
                                                     
@@ -370,8 +370,8 @@
                                               <span class="span-arrow"></span>Salud pública</a>
 
                                               <div class="titulo-menu-mobile">
-                                                <span class="span-arrow"></span> 
-                                                <a href="Interna Salud.html" class="">Salud publica</a>
+                                                  <span class="span-arrow"></span> 
+                                                  <a href="salud-menu.html" class="">Salud publica</a>
                                               </div>  
                                           </li>
                                           <li class="nav-item">
@@ -379,7 +379,7 @@
 
                                               <div class="titulo-menu-mobile">
                                                 <span class="span-arrow"></span> 
-                                                <a href="Interna Salud.html" class="">Plan de Beneficios en Salud</a>
+                                                <a href="salud-menu.html" class="">Plan de Beneficios en Salud</a>
                                               </div>   
 
                                           </li>
@@ -388,7 +388,7 @@
 
                                                 <div class="titulo-menu-mobile">
                                                 <span class="span-arrow"></span> 
-                                                <a href="Interna Salud.html" class="">Prestación de servicios</a>
+                                                <a href="salud-menu.html" class="">Prestación de servicios</a>
                                               </div>   
 
 
@@ -398,7 +398,7 @@
 
                                               <div class="titulo-menu-mobile">
                                                 <span class="span-arrow"></span> 
-                                                <a href="Interna Salud.html" class="">Calidad de atención en salud</a>
+                                                <a href="salud-menu.html" class="">Calidad de atención en salud</a>
                                               </div>   
 
                                           </li>
@@ -407,7 +407,7 @@
 
                                               <div class="titulo-menu-mobile">
                                                 <span class="span-arrow"></span> 
-                                                <a href="Interna Salud.html" class="">Medicamentos y tecnologías</a>
+                                                <a href="salud-menu.html" class="">Medicamentos y tecnologías</a>
                                               </div>   
 
 
@@ -417,7 +417,7 @@
 
                                             <div class="titulo-menu-mobile">
                                                 <span class="span-arrow"></span> 
-                                                <a href="Interna Salud.html" class="">Profesiones y ocupaciones</a>
+                                                <a href="salud-menu.html" class="">Profesiones y ocupaciones</a>
                                               </div>   
 
                                           </li>
@@ -593,8 +593,7 @@
                               </div>
                             </section>
                         </div> 
-                    </li> 
-
+                    </li>  
 
                    <!--  Proteccion Social -->
                     <li class="nav-item dropdown has-megamenu"> 
@@ -612,9 +611,9 @@
 
 
                                                       <div class="titulo-menu-mobile">
-                                                <span class="span-arrow"></span> 
-                                                <a href="Interna Salud.html" class="">Aseguramiento</a>
-                                              </div>  
+                                                      <span class="span-arrow"></span> 
+                                                      <a href="salud-menu.html" class="">Aseguramiento</a>
+                                                    </div>  
 
 
                                               </li>
@@ -623,9 +622,9 @@
                                                   <a class="nav-link titulo-menu-desktop" data-toggle="tab" href="#tab-21"><span class="span-arrow"></span>Financiamiento</a>
 
                                                       <div class="titulo-menu-mobile">
-                                                <span class="span-arrow"></span> 
-                                                <a href="Interna Salud.html" class="">Financiamiento</a>
-                                              </div>  
+                                                        <span class="span-arrow"></span> 
+                                                        <a href="salud-menu.html" class="">Financiamiento</a>
+                                                      </div>  
 
                                               </li>
                                               <li class="nav-item">
@@ -633,9 +632,9 @@
                                                   <a class="nav-link titulo-menu-desktop" data-toggle="tab" href="#tab-31"><span class="span-arrow"></span>Promoción social</a>
 
                                                       <div class="titulo-menu-mobile">
-                                                <span class="span-arrow"></span> 
-                                                <a href="Interna Salud.html" class="">Promoción social</a>
-                                              </div>  
+                                                        <span class="span-arrow"></span> 
+                                                        <a href="salud-menu.html" class="">Promoción social</a>
+                                                      </div>  
 
 
                                               </li> 
@@ -713,7 +712,6 @@
                             </section>     
                       </div>  
                     </li> 
-
 
                     <li class="nav-item no-desktop">
                         <a class="nav-link" href="Comunicaciones.html"><span class="span-menu-title">Centro de comunicaciones</span></a>
@@ -1319,7 +1317,7 @@
                   <li>
                      <img class="no-img" width="60"  alt="">
                      <a target="_blank"  href="https://www.minsalud.gov.co/salud/publica/epidemiologia/Paginas/cargue-planes-territoriales-de-salud.aspx">Portal web de Gestión PDSP</a></li> 
-<!--
+                  <!--
                   <li>
                      <img class="no-img" width="60"  alt="">
                      <a target="_blank"  href="https://www.minsalud.gov.co/Ministerio/internacional/Paginas/salud-para-la-paz.aspx">Salud para la paz</a></li> 
