--- a/funcionarios.html
+++ b/funcionarios.html
@@ -41,7 +41,7 @@
 
      <link rel="stylesheet" type="text/css" href="css/easy-responsive-tabs.css" /> -->
       <style>
-        #myDIV{
+        #acceso{
           display: none;
         }
       </style>
@@ -880,13 +880,18 @@
             </form>
             <button class="btn btn-primary" onclick="form_login()">Iniciar Sesión</button>
           </div>  
-          <div id="myDIV" class="box">
+          <div id="acceso" class="box">
             <ul class="lista-contenido">
-                <li><a href="https://correoweb.minsalud.gov.co/" target="_blank">Correo Institucional</a></li>
+                <li>Correo Institucional</li>
+                <li>Administradores de Contenido</li>
+                <li>Sitios Colaborativos</li>
+                <li>Acceder a trabajo colaborativo</li>
+                <li>Intranet</li>
+                <!-- <li><a href="https://correoweb.minsalud.gov.co/" target="_blank"></a>Correo Institucional</a></li>
                 <li><a href="https://www.minsalud.gov.co/Paginas/AdministradoresdeContenido.aspx" target="_blank">Administradores de Contenido</a></li>
                 <li><a href="https://www.minsalud.gov.co/Paginas/sitios%20colaborativos.aspx" target="_blank">Sitios Colaborativos</a></li>
                 <li><a href="https://www.minsalud.gov.co/area-colaborativa" target="_blank">Acceder a trabajo colaborativo</a></li>
-                <li><a href="https://intranet.minsalud.gov.co/Paginas/SaludNet.aspx" target="_blank">Intranet</a></li>
+                <li><a href="https://intranet.minsalud.gov.co/Paginas/SaludNet.aspx" target="_blank">Intranet</a></li> -->
             </ul>
           </div>
        
@@ -1056,7 +1061,7 @@
     <script>
     function form_login() {
       document.getElementById("formlogin").style.display = "none";
-      document.getElementById("myDIV").style.display = "block"; 
+      document.getElementById("acceso").style.display = "block"; 
     }
     </script>
       
